--- a/static/style.css
+++ b/static/style.css
@@ -37,6 +37,7 @@ body {
   grid-area: content;
   overflow-y: auto;
   overflow-x: hidden;
+  padding: 5px;
 }
 .wrapper > footer {
   grid-area: footer;
